# a2-interpreter

./: .gitignore  CMakeLists.txt  README.md  a2_interpreter.exe.stackdump  compiled1.a2  compiled2.a2
src/: main.c
src/a2-lib/: config.h  function.c  function.h  include.h  program.c  program.h  utils.c  utils.h
src/a2-lib/instructions/: instruction.h  instructions_arithmetic.h  instructions_control.h  instructions_flow.h  instructions_io.h  instructions_memory.h
src/interpreter/: config.h  context.c  context.h  file_reader.c  file_reader.h  file_utils.h  include.h  instruction_text_converter.h  interpreter.c  interpreter.h  log.c  log.h  utils.c  utils.h
src/interpreter/frontend/: file_reader.c  file_reader.h  file_utils.c  instruction_converters.c  instruction_converters.h
src/interpreter/instructions/: interp_instructions.c  interp_instructions.h  interp_instructions_arithmetic.c  interp_instructions_arithmetic.h  interp_instructions_control.c  interp_instructions_control.h  interp_instructions_flow.c  interp_instructions_flow.h  interp_instructions_io.c  interp_instructions_io.h  interp_instructions_memory.c  interp_instructions_memory.h
